--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.11.1",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "react-type": "^0.1.0",
     "typescript": "^4.9.5",
@@ -49,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router-hash-link": "^2.4.6",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2"
